[gd_scene load_steps=3 format=3 uid="uid://cuwmdyloxlkuw"]

[ext_resource type="Theme" path="res://unit drafting/Unit_Commander Draft/draft_selector_thick_border.tres" id="1_78p2v"]
[ext_resource type="Script" path="res://unit drafting/Unit_Commander Draft/growths_view.gd" id="2_jof43"]

[node name="GrowthsView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_78p2v")
script = ExtResource("2_jof43")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_right = 250.0
offset_bottom = 276.0
theme_override_constants/separation = 35

[node name="StatHeaderContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HeaderContainer" type="VBoxContainer" parent="HBoxContainer/StatHeaderContainer"]
layout_mode = 2

[node name="Move" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer"]
layout_mode = 2
text = "Move"

[node name="Consitution" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer"]
layout_mode = 2
text = "Constitution"

[node name="HeaderContainer2" type="VBoxContainer" parent="HBoxContainer/StatHeaderContainer"]
layout_mode = 2

[node name="Health" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Health"

[node name="Strength" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Strength"

[node name="Magic" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Magic"

[node name="Skill" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Skill"

[node name="Speed" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Speed"

[node name="Luck" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Luck"

[node name="Defense" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Defense"

[node name="Resistance" type="Label" parent="HBoxContainer/StatHeaderContainer/HeaderContainer2"]
layout_mode = 2
text = "Resistance"

[node name="Label" type="Label" parent="HBoxContainer/StatHeaderContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
text = "Growths"

[node name="GrowthsValueContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ValueContainer" type="VBoxContainer" parent="HBoxContainer/GrowthsValueContainer"]
layout_mode = 2

[node name="MoveValue" type="Label" parent="HBoxContainer/GrowthsValueContainer/ValueContainer"]
layout_mode = 2
text = "5"

[node name="ConsitutionValue" type="Label" parent="HBoxContainer/GrowthsValueContainer/ValueContainer"]
layout_mode = 2
text = "7"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/GrowthsValueContainer"]
layout_mode = 2

[node name="Health" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Strength" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Magic" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Skill" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Speed" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Luck" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Defense" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="Resistance" type="Label" parent="HBoxContainer/GrowthsValueContainer/VBoxContainer"]
layout_mode = 2
text = "80%"

[node name="OverallGrowthGradeLabel" type="Label" parent="HBoxContainer/GrowthsValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
text = "C+"

[node name="DifferenceValueContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DifferenceValueContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/DifferenceValueContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/DifferenceValueContainer/VBoxContainer"]
layout_mode = 2

[node name="DifferentialContainer" type="VBoxContainer" parent="HBoxContainer/DifferenceValueContainer"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2

[node name="Health" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Strength" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Magic" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Skill" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Speed" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Luck" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Defense" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Resistance" type="Label" parent="HBoxContainer/DifferenceValueContainer/DifferentialContainer"]
layout_mode = 2
text = "+80%"

[node name="Overall" type="Label" parent="HBoxContainer/DifferenceValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
text = "+160%"
